virdant/examples/errors/no_clock.vir
mod Top {
    reg r : Bit;
    r <= false;
}
